--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>teste-jsf</display-name>
   <welcome-file-list>
-    	<welcome-file>login.xhtml</welcome-file>
+    	<welcome-file>pages/index.xhtml</welcome-file>
 	</welcome-file-list>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
@@ -13,4 +13,8 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+  <context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>ui-darkness</param-value>
+	</context-param>
 </web-app>
